2006-04-13  Christian Persch  <chpe@cvs.gnome.org>

	* configure.ac:
	* embed/mozilla/GtkNSSDialogs.cpp:

	Check for nsIMutableArray.h and include it if found. Fixes build with
	gecko trunk.

2006-04-15  Tommi Komulainen  <tommi.komulainen@iki.fi>

	* lib/widgets/ephy-location-entry.c (update_favicon): Replace
	'stock-new' fallback favicon with more semantically correct
	'text-html' It also looks better with Tango icon theme. Bug #337140

2006-04-13  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-main.c:

	Add -p as short option format for --private-instance.

2006-04-12  Christian Persch  <chpe@cvs.gnome.org>

	* src/languages.h:

	Add Esperanto (eo).

2006-04-11  Crispin Flowerday  <gnome@flowerday.cx>

	* data/ui/epiphany-bookmark-editor-ui.xml:
	* data/ui/epiphany-history-window-ui.xml:
	* data/ui/epiphany-ui.xml:

	Reorder the menu items everywhere to have new tab above 
	new window. Fixes bug #303417

2006-04-10  Paul Drain <pd@cipherfunk.org>

	* data/art/Makefile.am:
	* data/bme-desktop.in.in:
 	* data/epiphany-desktop.in.in:

	Install App-Friendly Theme Icons (GNOME Goal Two)

2006-04-10  Christian Persch  <chpe@cvs.gnome.org>

	* src/ephy-find-toolbar.c:

	Don't set find next/prev insensitive since that's redundant with
	the status indication, and breaks find while the document is loading.

2006-04-10  Christian Persch  <chpe@cvs.gnome.org>

	* embed/mozilla/mozilla-embed.cpp:

	Emit document-change event on fastback restore. Fixes bug #312785.

2006-04-09  Christian Persch  <chpe@cvs.gnome.org>

	* data/default-prefs-common.js:

	Enable spatial nav extension.

2006-04-09  Christian Persch  <chpe@cvs.gnome.org>

	* data/Makefile.am:
	A data/epiphany-pango.schemas:
	* lib/ephy-prefs.h:
	* src/ephy-main.c: (main):

	Enable pango for some indic languages, which depend on it for correct
	rendering. Bug #335799.

2006-04-03  Jean-François Rameau  <jframeau@cvs.gnome.org>

	* src/ephy-net-monitor.c:
