@@ -1,4 +1,11 @@
-2006-04-13  Christian Persch  <chpe@cvs.gnome.org>
+2006-04-17  Chhristian Persch  <chpe@cvs.gnome.org>
+
+	* m4/gecko.m4:
+
+	Also allow cairo-gtk2 builds.
+	Builds but segfaults on startup.
+
+2006-04-17  Christian Persch  <chpe@cvs.gnome.org>
 
 	* configure.ac:
 	* embed/mozilla/GtkNSSDialogs.cpp:
